Fix CSS module selector for recently-listed section spacing

--- a/src/containers/PageBuilder/SectionBuilder/SectionContainer/SectionContainer.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionContainer/SectionContainer.module.css
@@ -29,7 +29,7 @@
   }
 }
 
-#recently-listed .sectionContent {
+:global(#recently-listed) .sectionContent {
   padding-top: 0;
 
   @media (--viewportMedium) {
